--- a/Abrigo.html
+++ b/Abrigo.html
@@ -43,7 +43,7 @@ A Instituição desenvolve diversas atividades, dentre elas destacamos:</p>
 </div>
 
 <div class="box apadrinhamento">
-  <img alt="" src="https://github.com/on-pr/semades/blob/main/img/pda.jpg" class="img-apadrinhamento">
+  <img alt="" src="img/pda.jpg" class="img-apadrinhamento">
   
 <p>O Projeto de Apadrinhamento é uma iniciativa fundamental para minimizar os danos sociais e emocionais enfrentados por muitos jovens de Vargem Alta. 
 Instituído pela Lei Nº 1.368, de 29 de novembro de 2021, e alterado pela Lei Nº 1.466, de 28 de agosto de 2023,
@@ -65,4 +65,5 @@ Clique aqui e saiba mais informações sobre o programa.
 
 
 </strong>
+
 
