--- a/cras.html
+++ b/cras.html
@@ -107,18 +107,26 @@
   <p>INTERESTADUAL: 60 ANOS</p>
   <br>
 
-  <h2>9. A CARTEIRA DE IDENTIFICAÇÃO DA PESSOA COM TRANSTORNO DO ESPECTRO AUTISTA (CIPTEA)</h2>
-  <p>O documento contém informações de identificação da pessoa com Transtorno do Espectro Autista, contato de emergência e, caso tenha, informações de seu representante legal/cuidador para trazer mais segurança e autonomia para os beneficiários do serviço . A Ciptea é um instrumento que visa garantir a atenção integral, o pronto atendimento e a prioridade no atendimento e no acesso aos serviços públicos e privados, em especial nas áreas de saúde, educação e assistência social, mediante a apresentação do documento pelo cidadão.</p>
+  <h2>9. CARTEIRA MUNICIPAL DE IDENTIFICAÇÃO DA PESSOA COM TRANSTORNO DO ESPECTRO AUTISTA (CMIPTEA)</h2>
+  <p>A Carteira Municipal de Identificação da Pessoa com Transtorno do Espectro Autista (CMIPTEA) é um serviço gratuito oferecido pelo Município de Vargem Alta que permite a identificação oficial da pessoa com Transtorno do Espectro Autista (TEA).
+  Por meio da CMIPTEA, o cidadão com TEA tem assegurado o atendimento prioritário e o acesso facilitado aos serviços públicos e privados, especialmente nas áreas de saúde, educação e assistência social, garantindo mais segurança, inclusão e respeito aos seus direitos.
+  O serviço é executado pela Secretaria Municipal de Assistência e Desenvolvimento Social, por meio dos CRAS, e possibilita a emissão da carteira em formato digital e/ou físico, com validade de 5 anos, contribuindo também para o mapeamento e planejamento das políticas públicas voltadas às pessoas com TEA no município.</p>
   <p><strong> Documentação Necessária :</strong></p>
   <ul>
-    <li>Documento de identidade com foto do solicitante;</li>
-    <li>CPF do solicitante;</li>
-    <li>Laudo médico que ateste o diagnóstico de TEA (Transtorno do Espectro Autista), contendo informações sobre a CID (Classificação Internacional de Doenças) e o CRM, carimbo e assinatura do médico.</li>
-    <li>Certidão de nascimento do solicitante;</li>
-    <li>Comprovante de residência;</li>
-    <li>Fotos 3x4;</li>
-    <li>Folha Espelho do CadÚnico;</li>
-    <li>RG e CPF (Do Responsável).</li>
+    <li>Carteira de identidade (RG) do identificado;</li>
+    <li>CPF do identificado;</li>
+    <li>Comprovante de residência do identificado;</li>
+    <li>Número de telefone do identificado; </li>
+    <li>Carteira de identidade (RG) do responsável legal ou cuidador;</li>
+    <li>CPF do responsável legal ou cuidador;</li>
+    <li>Comprovante de residência do responsável legal ou cuidador;</li>
+    <li>Telefone e e-mail do responsável legal ou cuidador;</li>
+    <li>Fotografia do identificado, em arquivo digital e/ou impressa;</li>
+    <li>Documento que comprove a tipagem sanguínea do requerente.</li>
+    <strong>Laudo médico digitalizado, contendo: </strong>
+    <li>Dados do paciente;</li>
+    <li>Classificação Internacional de Doenças (CID);</li>
+    <li>Assinatura, carimbo e número do CRM do médico responsável;</li>
   </ul>
   <br>
 
@@ -143,3 +151,4 @@
 
 </body>
 </html>
+
