--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 <div class="boxx">
-  <h1>Secretaria Municipal de Assistência e Desenvolvimento Social
-  <br>Secretário (a): CAMILA MARIA JUFFU LORENZONI</h1>
+  <h1>Secretaria Municipal de Assistência e Desenvolvimento Social</h1>
+<p><strong>Secretário(a):</strong> Camila Maria Juffu Lorenzoni</p>
 </div>
 <div class="box">
   <p>
@@ -75,3 +75,4 @@
 
 </body>
 </html>
+
