--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 </head>
 <body>
 <div class="boxx">
-  <h1>Secretaria Municipal de Assistência e Desenvolvimento Social</h1>
-<p><strong>Secretário(a):</strong> Camila Maria Juffu Lorenzoni</p>
+  <h1>Secretaria Municipal de Assistência e Desenvolvimento Social
+<p><strong>Secretário(a):</strong> Camila Maria Juffu Lorenzoni</p></h1>
 </div>
+<main> <section>
 <div class="box">
   <p>
     A Secretaria Municipal de Assistência e Desenvolvimento Social é o órgão responsável pela
@@ -69,10 +70,11 @@
   </p>
   <p><strong>Horário de Atendimento:</strong> 12h às 17h </p>
   </div>
-
+</section> </main>
 <div class="footer">
 </div>
 
 </body>
 </html>
+
 
