--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 </head>
 <body>
 <div class="boxx">
-  <h1>Secretaria Municipal de Assistência e Desenvolvimento Social
-<p><strong>Secretário(a):</strong> Camila Maria Juffu Lorenzoni</p></h1>
+  <h1><strong>Secretaria Municipal de Assistência e Desenvolvimento Social</strong>
+<br>Secretário(a):Camila Maria Juffu Lorenzoni</h1>
 </div>
-<main> <section>
+<main> 
+  <section>
 <div class="box">
   <p>
     A Secretaria Municipal de Assistência e Desenvolvimento Social é o órgão responsável pela
@@ -70,11 +71,13 @@
   </p>
   <p><strong>Horário de Atendimento:</strong> 12h às 17h </p>
   </div>
-</section> </main>
+</section> 
+</main>
 <div class="footer">
 </div>
 
 </body>
 </html>
+
 
 
