--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <!-- Cabeçalho institucional -->
+  <header>
+    <h1><strong>Secretaria Municipal de Assistência e Desenvolvimento Social</strong></h1>
+    <br>
+      Secretário(a):</strong> Camila Maria Juffu Lorenzoni
+  </header>
 <div class="boxx">
   <h1><strong>Secretaria Municipal de Assistência e Desenvolvimento Social</strong>
 <br>Secretário(a):Camila Maria Juffu Lorenzoni</h1>
@@ -78,6 +84,7 @@
 
 </body>
 </html>
+
 
 
 
