--- a/index.html
+++ b/index.html
@@ -1,88 +1,121 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8">
   <title>Secretaria Municipal de Assistência e Desenvolvimento Social</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
+
   <!-- Cabeçalho institucional -->
   <header>
-    <h1><strong>Secretaria Municipal de Assistência e Desenvolvimento Social</strong></h1>
-    <br>
-      Secretário(a):</strong> Camila Maria Juffu Lorenzoni
+    <h1>Secretaria Municipal de Assistência e Desenvolvimento Social</h1>
+    <p><strong>Secretário(a):</strong> Camila Maria Juffu Lorenzoni</p>
   </header>
-<div class="boxx">
-  <h1><strong>Secretaria Municipal de Assistência e Desenvolvimento Social</strong>
-<br>Secretário(a):Camila Maria Juffu Lorenzoni</h1>
-</div>
-<main> 
-  <section>
-<div class="box">
-  <p>
-    A Secretaria Municipal de Assistência e Desenvolvimento Social é o órgão responsável pela
-    coordenação, formulação e execução da Política Municipal de Assistência Social, bem como pela
-    gestão do Sistema Único de Assistência Social (SUAS) no município.
-  </p>
-  <p>
-    O SUAS organiza a rede de proteção social e garante a assistência social como direito do cidadão,
-    sendo formulado de forma participativa, com a sociedade civil e os Conselhos Municipais, visando
-    à promoção da cidadania, à defesa de direitos e à melhoria da qualidade de vida da população.
-  </p>
-  <h2>Finalidade</h2>
-  <p>
-    Promover a proteção social a famílias, grupos e indivíduos em situação de vulnerabilidade e risco
-    social, assegurando direitos socioassistenciais e contribuindo para o fortalecimento da autonomia
-    dos usuários.
-  </p>
-  <h2>Competências</h2>
-  <ul>
-    <li>Coordenar, formular e implementar a Política Municipal de Assistência Social;</li>
-    <li>Gerir os Fundos Municipais de Assistência Social e dos Direitos da Criança e do Adolescente;</li>
-    <li>Fortalecer os vínculos familiares e comunitários;</li>
-    <li>Garantir a proteção integral às famílias;</li>
-    <li>Articular e supervisionar os serviços, programas, projetos e benefícios socioassistenciais.</li>
-  </ul>
-  <h2>Organização da Proteção Social</h2>
-  <p>
-    A política de assistência social no município está organizada em dois níveis de proteção:
-  </p>
-  <ul>
-    <li>
-      <strong>Proteção Social Básica</strong><br>
-     <a href="cras.html"> CRAS – Centro de Referência de Assistência Social</a>
-    </li>
-    <li>
-      <strong>Proteção Social Especial</strong><br>
-      Média Complexidade: <a href="creas.html">CREAS – Centro de Referência Especializado de Assistência Social<br></a>
-      Alta Complexidade: <a href="Abrigo.html">ABRIGO - Serviços de Acolhimento Institucional </a>
-    </li>
-  </ul>
-  <h2>CONSELHOS VINCULADOS A SECRETARIA</h2>
-  <ul>
-    <li><a href="cmas.html">Conselho Municipal de Assistência Social</li></a>
-    <li><a href="cmdca.html">Conselho Municipal dos Direitos da Criança e do Adolescente</li></a>
-    <li><a href="cmdpi.html">Conselho Municipal dos Direitos da Pessoa Idosa</li></a>
-    <li><a href="cmdm.html">Conselho Municipal dos Direitos da Mulher</li></a>
-    <li><a href="ctuva.html">Conselho Tutelar</li></a>
-    
-  </ul>
-  <h2>Contato</h2>
-  <p><strong>Endereço:</strong> Avenida José João Sartório, s/nº – ao lado do Ginásio Municipal</p>
-  <p><strong>Telefone:</strong> (28) 3528-1390</p>
-  <p><strong>WhatsApp:</strong> (28) 99986-4027</p>
-  <p>
-    <strong>E-mail:</strong>
-    <a href="mailto:semadesva@gmail.com">semadesva@gmail.com</a>
-  </p>
-  <p><strong>Horário de Atendimento:</strong> 12h às 17h </p>
-  </div>
-</section> 
-</main>
-<div class="footer">
-</div>
+
+  <!-- Conteúdo principal -->
+  <main>
+
+    <!-- Sobre a Secretaria -->
+    <section>
+      <h2>Sobre a Secretaria</h2>
+
+      <p>
+        A Secretaria Municipal de Assistência e Desenvolvimento Social é o órgão responsável pela
+        coordenação, formulação e execução da Política Municipal de Assistência Social, bem como pela
+        gestão do Sistema Único de Assistência Social (SUAS) no município.
+      </p>
+
+      <p>
+        O SUAS organiza a rede de proteção social e garante a assistência social como direito do cidadão,
+        sendo formulado de forma participativa com a sociedade civil e os Conselhos Municipais, visando
+        à promoção da cidadania, à defesa de direitos e à melhoria da qualidade de vida da população.
+      </p>
+
+      <article>
+        <h3>Finalidade</h3>
+        <p>
+          Promover a proteção social a famílias, grupos e indivíduos em situação de vulnerabilidade e risco
+          social, assegurando direitos socioassistenciais e contribuindo para o fortalecimento da autonomia
+          dos usuários.
+        </p>
+      </article>
+
+      <article>
+        <h3>Competências</h3>
+        <ul>
+          <li>Coordenar, formular e implementar a Política Municipal de Assistência Social;</li>
+          <li>Gerir os Fundos Municipais de Assistência Social e dos Direitos da Criança e do Adolescente;</li>
+          <li>Fortalecer os vínculos familiares e comunitários;</li>
+          <li>Garantir a proteção integral às famílias;</li>
+          <li>Articular e supervisionar os serviços, programas, projetos e benefícios socioassistenciais.</li>
+        </ul>
+      </article>
+
+      <article>
+        <h3>Organização da Proteção Social</h3>
+        <p>A política de assistência social no município está organizada em dois níveis de proteção:</p>
+
+        <ul>
+          <li>
+            <strong>Proteção Social Básica:</strong>
+            <a href="cras.html">CRAS – Centro de Referência de Assistência Social</a>
+          </li>
+          <li>
+            <strong>Proteção Social Especial:</strong><br>
+            Média Complexidade:
+            <a href="creas.html">CREAS – Centro de Referência Especializado de Assistência Social</a><br>
+            Alta Complexidade:
+            <a href="Abrigo.html">Abrigo – Serviço de Acolhimento Institucional</a>
+          </li>
+        </ul>
+      </article>
+
+    </section>
+
+    <!-- Conselhos -->
+    <section>
+      <h2>Conselhos Vinculados à Secretaria</h2>
+
+      <ul>
+        <li><a href="cmas.html">Conselho Municipal de Assistência Social</a></li>
+        <li><a href="cmdca.html">Conselho Municipal dos Direitos da Criança e do Adolescente</a></li>
+        <li><a href="cmdpi.html">Conselho Municipal dos Direitos da Pessoa Idosa</a></li>
+        <li><a href="cmdm.html">Conselho Municipal dos Direitos da Mulher</a></li>
+        <li><a href="ctuva.html">Conselho Tutelar</a></li>
+      </ul>
+    </section>
+
+    <!-- Contato -->
+    <section>
+      <h2>Contato</h2>
+
+      <address>
+        <p><strong>Endereço:</strong> Avenida José João Sartório, s/nº – ao lado do Ginásio Municipal</p>
+        <p><strong>Telefone:</strong> (28) 3528-1390</p>
+        <p><strong>WhatsApp:</strong> (28) 99986-4027</p>
+        <p>
+          <strong>E-mail:</strong>
+          <a href="mailto:semadesva@gmail.com">semadesva@gmail.com</a>
+        </p>
+        <p><strong>Horário de Atendimento:</strong> 12h às 17h</p>
+      </address>
+
+    </section>
+
+  </main>
+
+  <!-- Rodapé institucional -->
+  <footer>
+    <p>Prefeitura Municipal de Vargem Alta – ES</p>
+    <p>Secretaria Municipal de Assistência e Desenvolvimento Social</p>
+  </footer>
 
 </body>
+
 </html>
 
 
