--- a/ctuva.html
+++ b/ctuva.html
@@ -2,39 +2,48 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Conselho Tutelar de Vargem Alta</title>
+  <title>Conselho Tutelar</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 
-<div class="boxx">
-  <h1>Conselho Tutelar de Vargem Alta</h1>
-</div>
+<header>
+  <h1>CONSELHO TUTELAR</h1>
+</header>
 
-<div class="box">
-  <p>O Conselho Tutelar de Vargem Alta desempenha um papel essencial na proteção dos direitos de crianças e adolescentes no município. Além do expediente regular, o Conselho Tutelar mantém atendimento durante a noite, finais de semana e feriados, por meio dos telefones de plantão. Importante destacar que, em regime de plantão, o atendimento é realizado exclusivamente pelos números de celular. Nos casos de urgência, as conselheiras plantonistas se deslocam até o local da ocorrência para acompanhar de perto a denúncia.</p>
-
-  <p>Além do atendimento direto, trabalham de forma articulada com os serviços de assistência social, CREAS, CRAS, saúde e demais órgãos competentes, assegurando apoio integral às famílias e proteção à infância e à juventude de Vargem Alta.</p>
+<main>
+<!--sobre o Conselho Tutelar-->
+<section class="box">
+  <h2>Conselho Tutelar - Vargem Alta/ES</h2>
+  <p>
+  O Conselho Tutelar de Vargem Alta desempenha um papel essencial na proteção dos direitos de crianças e adolescentes no município. Além do expediente regular, o Conselho Tutelar mantém atendimento durante a noite, finais de semana e feriados, por meio dos telefones de plantão. Importante destacar que, em regime de plantão, o atendimento é realizado exclusivamente pelos números de celular. Nos casos de urgência, as conselheiras plantonistas se deslocam até o local da ocorrência para acompanhar de perto a denúncia.
+  Além do atendimento direto, trabalham de forma articulada com os serviços de assistência social, CREAS, CRAS, saúde e demais órgãos competentes, assegurando apoio integral às famílias e proteção à infância e à juventude de Vargem Alta.
+  </p>
 
   <p><strong>Responsável:</strong> Kamila Santos de Souza</p>
-<br>
+
+  <br>
+
+  <!--contato-->
   <p><strong>Endereço para Atendimento:</strong></p>
   <p>Na sede localizada na Rua Frederico Fontana Filho, 25 – Centro.</p>
   <p>Telefone fixo: (28) 3528-1145</p>
+
   <p><strong>Telefones de plantão (noite, finais de semana e feriados):</strong></p>
   <p>Celular: (28) 99989-1114 / (28) 99963-3965</p>
+
   <br>
-  
-  <p><strong>E-mail:</strong><a href="mailto:conselhocontuva@gmail.com">conselhocontuva@gmail.com</a></p>
+
+  <p><strong>E-mail:</strong> <a href="mailto:conselhocontuva@gmail.com">conselhocontuva@gmail.com</a></p>
 
   <p><strong>Horário de Atendimento:</strong></p>
   <p>08H00 às 17H00 horas</p>
-</div>
+</section>
+</main>
 
 <div class="footer">
 </div>
 
 </body>
 </html>
-
