--- a/creas.html
+++ b/creas.html
@@ -2,29 +2,34 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Serviços Ofertados no CREAS - Vargem Alta/ES</title>
+  <title>Centro de Referência Especializado de Assistência Social (CREAS)</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-  <div class="boxx">
-    <h1>Serviços Ofertados no CREAS<br>Vargem Alta – ES</h1>
-  </div>
+  <header>
+    <h1>CREAS – CENTRO DE REFERÊNCIA ESPECIALIZADO DE ASSISTÊNCIA SOCIAL</h1>
+  </header>
 
-  <p>O Centro de Referência Especializado de Assistência Social (CREAS) configura-se como uma unidade pública e estatal, que oferta serviços especializados e continuados a famílias e indivíduos em situação de ameaça ou violação de direitos.</p>
+<main>
 
-  <p>O Centro de Referência Especializado da Assistência Social – CREAS é o local de referência para a execução dos serviços da Proteção Social Especial de Média Complexidade, de acordo com a Tipificação Nacional dos Serviços Socioassistenciais.</p>
+  <!-- Sobre o CREAS -->
+  <section class="box">
+    <h2>Centro de Referência Especializado de Assistência Social (CREAS) - Vargem Alta/ES</h2>
+    <p>
+      É uma unidade pública e estatal, que oferta serviços especializados e continuados a famílias e indivíduos em situação de ameaça ou violação de direitos.
+      Sendo o local de referência para a execução dos serviços da Proteção Social Especial de Média Complexidade, de acordo com a Tipificação Nacional dos Serviços Socioassistenciais.
+    </p>
+    <p><strong>Responsável:</strong> Maria Aparecida Souza</p>
 
-  <p><strong>Responsável:</strong> Maria Aparecida Souza</p>
+    <p><strong>Endereço:</strong> Avenida José João Sartório, s/nº, ao lado do Ginásio Municipal</p>
+    <p><strong>Telefone / WhatsApp:</strong> (28) 99902-5895</p>
+    <p><strong>E-mail:</strong> <a href="mailto:creas.vargemalta@hotmail.com">creas.vargemalta@hotmail.com</a></p>
+    <p><strong>Horário de Atendimento:</strong> 12h00 às 17h00</p>
 
- 
-  <p><strong>Endereço:</strong> Avenida José João Sartório, s/nº, ao lado do Ginásio Municipal</p>
-  <p><strong>Telefone / WhatsApp:</strong> (28) 99902-5895</p>
-  <p><strong>E-mail:</strong><a href="mailto:creas.vargemalta@hotmail.com">creas.vargemalta@hotmail.com</a></p>
-  <p><strong>Horário de Atendimento:</strong> 12h00 às 17h00</p>
+    <!--Sobre os Serviços-->
+    <h2>Serviços Ofertados no CREAS</h2>
 
-  <br>
-  <div class="box">
     <h2>1. PAEFI – Serviço de Proteção e Atendimento Especializado às Famílias e Indivíduos</h2>
     <p>
       Serviço de apoio, orientação e acompanhamento a famílias com um ou mais de seus membros em situação de ameaça ou violação de direitos.
@@ -54,9 +59,7 @@
       <li>Vivência de trabalho infantil;</li>
       <li>Discriminação em decorrência da orientação sexual e/ou raça/etnia.</li>
     </ul>
-  </div>
 
-  <div class="box">
     <h2>2. Serviço Especializado em Abordagem Social</h2>
     <p>
       Ofertado de forma continuada e programada com a finalidade de assegurar trabalho social de abordagem e busca ativa que identifique,
@@ -71,9 +74,7 @@
     <p>
       Crianças, adolescentes, jovens, adultos, idosos e famílias que utilizam espaços públicos como forma de moradia e/ou sobrevivência.
     </p>
-  </div>
 
-  <div class="box">
     <h2>3. Serviço Especializado para Pessoas em Situação de Rua</h2>
     <p>
       Serviço ofertado para pessoas que utilizam as ruas como espaço de moradia e/ou sobrevivência.
@@ -98,9 +99,7 @@
     <p>
       Crianças, adolescentes, jovens, adultos, idosos e famílias que utilizam espaços públicos como forma de moradia e/ou sobrevivência.
     </p>
-  </div>
 
-  <div class="box">
     <h2>4. Serviço de Proteção Social Especial para Pessoas com Deficiência, Idosas e suas Famílias</h2>
     <p>
       Serviço para a oferta de atendimento especializado a famílias com pessoas com deficiência e idosos com algum grau de dependência,
@@ -116,9 +115,7 @@
     <p>
       Crianças, adolescentes, jovens, adultos, idosos e famílias que utilizam espaços públicos como forma de moradia e/ou sobrevivência.
     </p>
-  </div>
 
-  <div class="box">
     <h2>5. Serviço de Proteção Social a Adolescentes em Cumprimento de Medida Socioeducativa de Liberdade Assistida (LA) e de Prestação de Serviços à Comunidade (PSC)</h2>
     <p>
       O serviço tem por finalidade prover atenção socioassistencial e acompanhamento a adolescentes e jovens em cumprimento de medidas
@@ -136,11 +133,13 @@
       e de Prestação de Serviços à Comunidade, aplicada pela Justiça da Infância e da Juventude ou, na ausência desta, pela Vara Civil
       correspondente, e suas famílias.
     </p>
-  </div>
 
-  <div class="footer">
-    <!-- Rodapé opcional -->
-  </div>
+  </section>
+
+</main>
+
+<div class="footer">
+</div>
 
 </body>
 </html>
