--- a/cmdpi.html
+++ b/cmdpi.html
@@ -1,69 +1,87 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Conselho Municipal dos Direitos da Pessoa Idosa - Vargem Alta</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Conselho Municipal dos Direitos da Pessoa Idosa</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 
-<div class="boxx">
-  <h1>Conselho Municipal dos Direitos da Pessoa Idosa<br>Vargem Alta – ES</h1>
-</div>
+<header>
+  <h1>Conselho Municipal dos Direitos da Pessoa Idosa</h1>
+</header>
 
-<div class="content">
-  <p>
-    Este espaço reúne, de forma simples e acessível, as principais informações sobre o Conselho Municipal dos Direitos da Pessoa Idosa (CMDPI) de Vargem Alta. Aqui você encontra dados sobre a atuação do conselho, seus membros, formas de contato e documentos importantes.
-  </p>
+<main>
 
-  <p>
-    A proposta é facilitar o acesso às informações e fortalecer a participação da comunidade na garantia dos direitos da pessoa idosa. O Conselho Municipal dos Direitos da Pessoa Idosa (CMDPI) de Vargem Alta–ES foi criado pela Lei nº 493/2005, sendo posteriormente reformulado.
-  </p>
+  <!-- Sobre o Conselho -->
+  <section class="box">
+    <h2>Conselho Municipal dos Direitos da Pessoa Idosa – Vargem Alta/ES</h2>
+    <p>
+      Este espaço reúne, de forma simples e acessível, as principais informações sobre o Conselho Municipal dos Direitos da Pessoa Idosa (CMDPI) de Vargem Alta. Aqui você encontra dados sobre a atuação do conselho, seus membros, formas de contato e documentos importantes.
+    </p>
 
-  <p>
-    Trata-se de um órgão consultivo e deliberativo, que atua em articulação com a Secretaria Municipal de Assistência e Desenvolvimento Social, com a finalidade de garantir os direitos e promover a qualidade de vida da pessoa idosa.
-  </p>
+    <p>
+      A proposta é facilitar o acesso às informações e fortalecer a participação da comunidade na garantia dos direitos da pessoa idosa. O Conselho Municipal dos Direitos da Pessoa Idosa (CMDPI) de Vargem Alta–ES foi criado pela Lei nº 493/2005, sendo posteriormente reformulado.
+    </p>
 
-  <h2>Diretoria do CMDPI</h2>
-  <p><strong>Presidente:</strong> Andréia Bazoni Dillen Viale</p>
-  <p><strong>Vice-Presidente:</strong> Ana Ignês Cereza</p>
-  <p><strong>Secretária:</strong> Maria Aparecida Ferreira Pimental Pazetto</p>
+    <p>
+      Trata-se de um órgão consultivo e deliberativo, que atua em articulação com a Secretaria Municipal de Assistência e Desenvolvimento Social, com a finalidade de garantir os direitos e promover a qualidade de vida da pessoa idosa.
+    </p>
 
-  <h3>Contatos</h3>
-  <p><strong>Endereço:</strong> Avenida José João Sartório, nº 36-16 – Vargem Alta/ES – CEP 29295-000</p>
-  <p>(Mesmo endereço da Secretaria Municipal de Assistência e Desenvolvimento Social)</p>
-  <p><strong>Telefone:</strong> (28) 99949-4027</p>
-  <p><strong>E-mail:</strong> <a href="mailto:cmdpi.vargemalta@gmail.com">cmdpi.vargemalta@gmail.com</a></p>
-</div>
+    <h3>Diretoria do CMDPI</h3>
+    <ul>
+      <li><strong>Presidente:</strong> Andréia Bazoni Dillen Viale</li>
+      <li><strong>Vice-Presidente:</strong> Ana Ignês Cereza</li>
+      <li><strong>Secretária:</strong> Maria Aparecida Ferreira Pimental Pazetto</li>
+    </ul>
 
-<div class="box">
-  <h4>Documentos e Informações Úteis</h4>
-  <ul>
-    <li>Regimento Interno</li>
-    <li>Atas de Reuniões</li>
-    <li>Resoluções</li>
-    <li>Calendário de Reuniões</li>
-    <li>Editais</li>
-    <li>Outros documentos relevantes</li>
-  </ul>
+    <h3>Contatos</h3>
+    <ul>
+      <li><strong>Endereço:</strong> Avenida José João Sartório, nº 36-16 – Vargem Alta/ES – CEP 29295-000</li>
+      <li>(Mesmo endereço da Secretaria Municipal de Assistência e Desenvolvimento Social)</li>
+      <li><strong>Telefone:</strong> (28) 99949-4027</li>
+      <li><strong>E-mail:</strong> <a href="mailto:cmdpi.vargemalta@gmail.com">cmdpi.vargemalta@gmail.com</a></li>
+    </ul>
+  </section>
 
-  <h5>Inscrição de Instituições no CMDPI</h5>
-  <p>
-    A inscrição de instituições (organizações da sociedade civil ou governamentais) para participação no Conselho Municipal dos Direitos da Pessoa Idosa (CMDPI) ocorre, geralmente, por meio de Editais de Chamamento Público ou através de inscrição e registro da entidade junto à Secretaria Executiva do Conselho. O processo pode variar conforme o município, mas segue um padrão estabelecido pelo Estatuto da Pessoa Idosa e pelas normas municipais vigentes.
-  </p>
+  <!-- Documentos -->
+  <section class="box">
+    <h3>Documentos e Informações Úteis</h3>
+    <ul>
+      <li>Regimento Interno</li>
+      <li>Atas de Reuniões</li>
+      <li>Resoluções</li>
+      <li>Calendário de Reuniões</li>
+      <li>Editais</li>
+      <li>Outros documentos relevantes</li>
+    </ul>
+  </section>
 
-  <h6>Projetos e Iniciativas do CMDPI</h6>
-  <p><strong>Ações e Atividades:</strong> Fomento de políticas públicas voltadas ao envelhecimento ativo e digno, com destaque para o Centro de Convivência do Idoso, que passou por processo de reforma.</p>
-  <p><strong>Conferências:</strong> Realização de Conferências Municipais, como a IV e a V Conferência Municipal dos Direitos da Pessoa Idosa, com o objetivo de debater e aprovar diretrizes para a política da pessoa idosa, promovendo a participação da sociedade.</p>
-  <p><strong>Atuação:</strong> Atua em consonância com a legislação nacional, defendendo os direitos à saúde, ao lazer, à convivência familiar e comunitária, com atenção especial à prevenção da violência e da exclusão social da pessoa idosa.</p>
+  <!-- Inscrição -->
+  <section class="box">
+    <h3>Inscrição de Instituições no CMDPI</h3>
+    <p>
+      A inscrição de instituições (organizações da sociedade civil ou governamentais) para participação no Conselho Municipal dos Direitos da Pessoa Idosa (CMDPI) ocorre, geralmente, por meio de Editais de Chamamento Público ou através de inscrição e registro da entidade junto à Secretaria Executiva do Conselho. O processo pode variar conforme o município, mas segue um padrão estabelecido pelo Estatuto da Pessoa Idosa e pelas normas municipais vigentes.
+    </p>
+  </section>
 
-  <p><strong>Local de Apoio:</strong><br>
-  As atividades do Conselho e os serviços de convivência são frequentemente realizados no Centro de Convivência do Idoso, localizado próximo ao ginásio municipal, sob a gestão da Secretaria Municipal de Assistência e Desenvolvimento Social.</p>
-</div>
+  <!-- Projetos -->
+  <section class="box">
+    <h3>Projetos e Iniciativas do CMDPI</h3>
+    <ul>
+      <li><strong>Ações e Atividades:</strong> Fomento de políticas públicas voltadas ao envelhecimento ativo e digno, com destaque para o Centro de Convivência do Idoso, que passou por processo de reforma.</li>
+      <li><strong>Conferências:</strong> Realização de Conferências Municipais, como a IV e a V Conferência Municipal dos Direitos da Pessoa Idosa, com o objetivo de debater e aprovar diretrizes para a política da pessoa idosa, promovendo a participação da sociedade.</li>
+      <li><strong>Atuação:</strong> Atua em consonância com a legislação nacional, defendendo os direitos à saúde, ao lazer, à convivência familiar e comunitária, com atenção especial à prevenção da violência e da exclusão social da pessoa idosa.</li>
+      <li><strong>Local de Apoio:</strong> As atividades do Conselho e os serviços de convivência são frequentemente realizados no Centro de Convivência do Idoso, localizado próximo ao ginásio municipal, sob a gestão da Secretaria Municipal de Assistência e Desenvolvimento Social.</li>
+    </ul>
+  </section>
 
-<div class="footer">
-</div>
+</main>
+
+<footer>
+</footer>
 
 </body>
 </html>
