--- a/cmdm.html
+++ b/cmdm.html
@@ -1,69 +1,86 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Conselho Municipal dos Direitos da Mulher - Vargem Alta</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Conselho Municipal dos Direitos da Mulher</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 
-<div class="boxx">
-  <h1>Conselho Municipal dos Direitos da Mulher<br>Vargem Alta – ES</h1>
-</div>
+<header>
+  <h1>Conselho Municipal dos Direitos da Mulher</h1>
+</header>
 
-<div class="content">
-  <p>
-    Este espaço reúne, de forma simples e acessível, as principais informações sobre o Conselho Municipal dos Direitos da Mulher (CMDM) de Vargem Alta. Aqui você encontra dados sobre a atuação do Conselho, seus membros, formas de contato e documentos importantes.
-  </p>
+<main>
 
-  <p>
-    A proposta é facilitar o acesso às informações e fortalecer a participação da comunidade na garantia dos direitos da mulher.
-  </p>
+  <!-- Sobre o Conselho -->
+  <section class="box">
+   <h2>Conselho Municipal dos Direitos da Mulher - Vargem Alta/ES</h2>
+  
+    <p>
+      Este espaço reúne, de forma simples e acessível, as principais informações sobre o Conselho Municipal dos Direitos da Mulher (CMDM) de Vargem Alta. Aqui você encontra dados sobre a atuação do Conselho, seus membros, formas de contato e documentos importantes.
+    </p>
 
-  <h2>Diretoria do CMDM</h2>
-  <p><strong>Presidente:</strong> Lubiana Aparecida Pereira Fonseca</p>
-  <p><strong>Vice-Presidente:</strong> Neuzeli Farias Fonseca</p>
-  <p><strong>Secretária:</strong> Denise Maria Gomes Moreira</p>
+    <p>
+      A proposta é facilitar o acesso às informações e fortalecer a participação da comunidade na garantia dos direitos da mulher.
+    </p>
 
-  <h3>Contato</h3>
-  <p><strong>E-mail:</strong> <a href="mailto:conselhomulherva26@gmail.com">conselhomulherva26@gmail.com</a></p>
-  <p><strong>Telefone:</strong> (28) 99986-4027</p>
-  <p><strong>Endereço:</strong> Avenida José João Sartório, nº 36-16 – Vargem Alta/ES – CEP 29295-000</p>
-  <p>(Mesmo endereço da Secretaria Municipal de Assistência e Desenvolvimento Social)</p>
-</div>
+    <h3>Diretoria do CMDM</h3>
+    <ul>
+      <li><strong>Presidente:</strong> Lubiana Aparecida Pereira Fonseca</li>
+      <li><strong>Vice-Presidente:</strong> Neuzeli Farias Fonseca</li>
+      <li><strong>Secretária:</strong> Denise Maria Gomes Moreira</li>
+    </ul>
 
-<div class="box">
-  <h4>Documentos e Informações Úteis</h4>
-  <ul>
-    <li>Regimento Interno</li>
-    <li>Atas de Reuniões</li>
-    <li>Resoluções</li>
-    <li>Calendário de Reuniões</li>
-    <li>Editais</li>
-    <li>Outros documentos relevantes</li>
-  </ul>
+    <h3>Contato</h3>
+    <ul>
+      <li><strong>E-mail:</strong> <a href="mailto:conselhomulherva26@gmail.com">conselhomulherva26@gmail.com</a></li>
+      <li><strong>Telefone:</strong> (28) 99986-4027</li>
+      <li><strong>Endereço:</strong> Avenida José João Sartório, nº 36-16 – Vargem Alta/ES – CEP 29295-000</li>
+      <li>(Mesmo endereço da Secretaria Municipal de Assistência e Desenvolvimento Social)</li>
+    </ul>
+  </section>
 
-  <h5>Inscrição de Instituições no CMDM</h5>
-  <p>
-    Para que uma instituição (ONG, associação ou entidade da sociedade civil) se inscreva e faça parte do Conselho Municipal dos Direitos da Mulher (CMDM), é necessário atender aos requisitos de formalização e aguardar a publicação de Edital de Chamamento Público.
-  </p>
+  <!-- Documentos -->
+  <section class="box">
+    <h3>Documentos e Informações Úteis</h3>
+    <ul>
+      <li>Regimento Interno</li>
+      <li>Atas de Reuniões</li>
+      <li>Resoluções</li>
+      <li>Calendário de Reuniões</li>
+      <li>Editais</li>
+      <li>Outros documentos relevantes</li>
+    </ul>
+  </section>
 
-  <p>
-    O Conselho possui composição paritária, incluindo representantes do poder público e da sociedade civil.
-  </p>
+  <!-- Inscrição -->
+  <section class="box">
+    <h3>Inscrição de Instituições no CMDM</h3>
+    <p>
+      Para que uma instituição (ONG, associação ou entidade da sociedade civil) se inscreva e faça parte do Conselho Municipal dos Direitos da Mulher (CMDM), é necessário atender aos requisitos de formalização e aguardar a publicação de Edital de Chamamento Público.
+    </p>
 
-  <p><strong>Requisitos para inscrição:</strong></p>
-  <ul>
-    <li><strong>CNPJ ativo:</strong> A instituição deve possuir Cadastro Nacional de Pessoa Jurídica (CNPJ) ativo.</li>
-    <li><strong>Atuação:</strong> Desenvolver atividades, estudos ou ações voltadas à promoção dos direitos das mulheres, à igualdade de gênero ou ao combate à violência contra a mulher.</li>
-    <li><strong>Regularidade documental:</strong> Estar com o estatuto social atualizado e com a diretoria devidamente regularizada.</li>
-    <li><strong>Inscrição no edital:</strong> A instituição deve se inscrever durante o período de chamamento público, divulgado no Diário Oficial pela Prefeitura de Vargem Alta, geralmente a cada dois anos ou conforme a legislação municipal vigente.</li>
-  </ul>
-</div>
+    <p>
+      O Conselho possui composição paritária, incluindo representantes do poder público e da sociedade civil.
+    </p>
 
-<div class="footer">
-</div>
+    <p><strong>Requisitos para inscrição:</strong></p>
+
+    <ul>
+      <li><strong>CNPJ ativo:</strong> A instituição deve possuir Cadastro Nacional de Pessoa Jurídica (CNPJ) ativo.</li>
+      <li><strong>Atuação:</strong> Desenvolver atividades, estudos ou ações voltadas à promoção dos direitos das mulheres, à igualdade de gênero ou ao combate à violência contra a mulher.</li>
+      <li><strong>Regularidade documental:</strong> Estar com o estatuto social atualizado e com a diretoria devidamente regularizada.</li>
+      <li><strong>Inscrição no edital:</strong> A instituição deve se inscrever durante o período de chamamento público, divulgado no Diário Oficial pela Prefeitura de Vargem Alta, geralmente a cada dois anos ou conforme a legislação municipal vigente.</li>
+    </ul>
+  </section>
+
+</main>
+
+<footer>
+</footer>
 
 </body>
 </html>
