--- a/cmdca.html
+++ b/cmdca.html
@@ -1,74 +1,107 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Conselho Municipal de Direitos da Criança e do Adolescente – Vargem Alta</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Conselho Municipal de Direitos da Criança e do Adolescente</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 
-<div class="boxx">
-  <h1>Conselho Municipal de Direitos da Criança e do Adolescente – Vargem Alta</h1>
-</div>
- <p>Este espaço reúne, de forma simples e acessível, as principais informações sobre o Conselho Municipal de Direitos da Criança e do Adolescente (CMDCA) de Vargem Alta. Aqui você encontra dados sobre a atuação do conselho, seus membros, formas de contato e documentos importantes. A proposta é facilitar o acesso às informações e fortalecer a participação da comunidade na garantia dos direitos de crianças e adolescentes.</p>
-  <br>
-  <h2>Diretoria do CMDCA</h2>
-  <p>Presidente: Emerson Cereza Souza</p>
-  <p>Vice-Presidente: Ana Ignez Cereza</p>
-  <p>Secretário: Samuel Cole Pereira das Neves</p>
-  <br>
-  <h2>Contato</h2>
-  <p>E-mail: <a href="mailto:comdcavavga@gmail.com">comdcavavga@gmail.com</a></p>
-  <p>Telefone: (28) 99986-4027</p>
-  <p>Endereço: Av. José João Sartório, 36-16 - Vargem Alta, ES, 29295-000 (O mesmo da Secretaria Municipal de Assistência e Desenvolvimento Social.</p>
-  <br>
-  <div class="box">
-  <h2>Documentos e Informações Úteis</h2>
-  <p>Regimento Interno</p>
-  <p>Atas de Reuniões</p>
-  <p>Resoluções</p>
-  <p>Calendário de Reuniões</p>
-  <p>Editais</p>
-  <p>Outros documentos relevantes</p>
+<header>
+  <h1>Conselho Municipal de Direitos da Criança e do Adolescente</h1>
+</header>
 
-  <h2>Inscrição de Instituições no CMDCA</h2>
-  <p>As instituições que desenvolvem atividades, programas ou serviços voltados para crianças e adolescentes devem realizar sua inscrição no Conselho Municipal de Direitos da Criança e do Adolescente (CMDCA), conforme previsto no Estatuto da Criança e do Adolescente (ECA).</p>
-  <p>A inscrição é importante para garantir reconhecimento formal, fortalecer a rede de proteção e possibilitar participação em ações, projetos e parcerias municipais.</p>
-  <p>Como se inscrever:</p>
-  <p>Acesse o formulário no link abaixo e preencha todas as informações solicitadas.</p>
-  <p>Link para inscrição: CLIQUE AQUI</p>
-  <br>
-  <h2>Projetos e Iniciativas do CMDCA</h2>
-  <p>O Conselho Municipal de Direitos da Criança e do Adolescente (CMDCA) desenvolve e acompanha diversas ações voltadas à garantia e à promoção dos direitos de crianças e adolescentes em Vargem Alta. Entre essas iniciativas, estão projetos, propostas de leis, parcerias, campanhas e outras atividades que fortalecem a rede de proteção no município.</p>
-  <p>Nesta seção, serão disponibilizados os projetos em andamento e concluídos, bem como propostas de normativas e ações estruturantes conduzidas pelo Conselho.</p>
-  <p>LEI Nº 1.573, DE 08 DE SETEMBRO DE 2025: INSTITUI O SELO "EMPRESA AMIGA DA INFÂNCIA E ADOLESCÊNCIA" NO MUNICÍPIO DE VARGEM AlTA/ES.</p>
-  <p>REGULAMENTO: DECRETO Nº</p>
-  <p>LISTA DE EMPRESAS AMIGAS DA INFÂNCIA E ADOLESCÊNCIA:</p>
-  <br>
-  <h2>Instituições Inscritas e Ativas</h2>
-  <p>Nesta área, você pode consultar a relação das instituições regularmente inscritas no Conselho Municipal de Direitos da Criança e do Adolescente (CMDCA) e consideradas ativas no município. A lista contém apenas entidades que possuem documentação atualizada e estão em conformidade com as exigências do Conselho.</p>
-  <p>Acesse a lista completa no link abaixo:</p>
-  <p>Lista de Instituições Inscritas e Ativas: LISTA DE INSTITUIÇÕES INSCRITAS NO CMDCA (Ainda não disponível)</p>
-  <br>
-  <h2>Fundo da Infância e Adolescência (FIA)</h2>
-  <p>O Fundo Municipal dos Direitos da Criança e do Adolescente (FIA) de Vargem Alta é um mecanismo legal destinado a financiar projetos, programas e ações voltados à promoção, proteção e defesa dos direitos de crianças e adolescentes no município.</p>
-  <p>Os recursos do FIA podem ser aplicados em iniciativas de instituições inscritas no CMDCA, campanhas, serviços e políticas públicas que fortaleçam a rede de atendimento.</p>
-  <p>O Conselho Municipal de Direitos da Criança e do Adolescente (CMDCA) é o responsável por gerir e deliberar sobre a utilização dos recursos, garantindo transparência e alinhamento às prioridades estabelecidas.</p>
-<br>
-  <p>Nesta aba você encontrará:</p>
-  <p>Informações sobre o funcionamento do FIA</p>
-  <p>Editais e chamamentos públicos</p>
-  <p>Prestação de contas e relatórios</p>
-  <p>Projetos financiados pelo Fundo</p>
-  <p>Orientações para instituições interessadas</p>
-<br>
-  <p>Para acessar documentos ou informações específicas:</p>
-  <p>Link para documentos do FIA: Link em manutenção.</p>
-</div>
+<main>
 
-<div class="footer">
-</div>
+  <!-- Sobre -->
+  <section class="box">
+    <h2>Conselho Municipal de Direitos da Criança e do Adolescente – Vargem Alta/ES</h2>
+    <p>
+      Este espaço reúne, de forma simples e acessível, as principais informações sobre o Conselho Municipal de Direitos da Criança e do Adolescente (CMDCA) de Vargem Alta. Aqui você encontra dados sobre a atuação do conselho, seus membros, formas de contato e documentos importantes. A proposta é facilitar o acesso às informações e fortalecer a participação da comunidade na garantia dos direitos de crianças e adolescentes.
+    </p>
+
+    <h3>Diretoria do CMDCA</h3>
+    <ul>
+      <li>Presidente: Emerson Cereza Souza</li>
+      <li>Vice-Presidente: Ana Ignez Cereza</li>
+      <li>Secretário: Samuel Cole Pereira das Neves</li>
+    </ul>
+
+    <h3>Contato</h3>
+    <ul>
+      <li>E-mail: <a href="mailto:comdcavavga@gmail.com">comdcavavga@gmail.com</a></li>
+      <li>Telefone: (28) 99986-4027</li>
+      <li>Endereço: Av. José João Sartório, 36-16 - Vargem Alta, ES, 29295-000 (O mesmo da Secretaria Municipal de Assistência e Desenvolvimento Social.</li>
+    </ul>
+  </section>
+
+  <!-- Documentos -->
+  <section class="box">
+    <h3>Documentos e Informações Úteis</h3>
+    <ul>
+      <li>Regimento Interno</li>
+      <li>Atas de Reuniões</li>
+      <li>Resoluções</li>
+      <li>Calendário de Reuniões</li>
+      <li>Editais</li>
+      <li>Outros documentos relevantes</li>
+    </ul>
+  </section>
+
+  <!-- Inscrição -->
+  <section class="box">
+    <h3>Inscrição de Instituições no CMDCA</h3>
+    <p>As instituições que desenvolvem atividades, programas ou serviços voltados para crianças e adolescentes devem realizar sua inscrição no Conselho Municipal de Direitos da Criança e do Adolescente (CMDCA), conforme previsto no Estatuto da Criança e do Adolescente (ECA).</p>
+    <p>A inscrição é importante para garantir reconhecimento formal, fortalecer a rede de proteção e possibilitar participação em ações, projetos e parcerias municipais.</p>
+    <p>Como se inscrever:</p>
+    <p>Acesse o formulário no link abaixo e preencha todas as informações solicitadas.</p>
+    <p>Link para inscrição: CLIQUE AQUI</p>
+  </section>
+
+  <!-- Projetos -->
+  <section class="box">
+    <h3>Projetos e Iniciativas do CMDCA</h3>
+    <p>O Conselho Municipal de Direitos da Criança e do Adolescente (CMDCA) desenvolve e acompanha diversas ações voltadas à garantia e à promoção dos direitos de crianças e adolescentes em Vargem Alta. Entre essas iniciativas, estão projetos, propostas de leis, parcerias, campanhas e outras atividades que fortalecem a rede de proteção no município.</p>
+    <p>Nesta seção, serão disponibilizados os projetos em andamento e concluídos, bem como propostas de normativas e ações estruturantes conduzidas pelo Conselho.</p>
+    <p>LEI Nº 1.573, DE 08 DE SETEMBRO DE 2025: INSTITUI O SELO "EMPRESA AMIGA DA INFÂNCIA E ADOLESCÊNCIA" NO MUNICÍPIO DE VARGEM AlTA/ES.</p>
+    <p>REGULAMENTO: DECRETO Nº</p>
+    <p>LISTA DE EMPRESAS AMIGAS DA INFÂNCIA E ADOLESCÊNCIA:</p>
+  </section>
+
+  <!-- Instituições -->
+  <section class="box">
+    <h3>Instituições Inscritas e Ativas</h3>
+    <p>Nesta área, você pode consultar a relação das instituições regularmente inscritas no Conselho Municipal de Direitos da Criança e do Adolescente (CMDCA) e consideradas ativas no município. A lista contém apenas entidades que possuem documentação atualizada e estão em conformidade com as exigências do Conselho.</p>
+    <p>Acesse a lista completa no link abaixo:</p>
+    <p>Lista de Instituições Inscritas e Ativas: LISTA DE INSTITUIÇÕES INSCRITAS NO CMDCA (Ainda não disponível)</p>
+  </section>
+
+  <!-- FIA -->
+  <section class="box">
+    <h3>Fundo da Infância e Adolescência (FIA)</h3>
+    <p>O Fundo Municipal dos Direitos da Criança e do Adolescente (FIA) de Vargem Alta é um mecanismo legal destinado a financiar projetos, programas e ações voltados à promoção, proteção e defesa dos direitos de crianças e adolescentes no município.</p>
+    <p>Os recursos do FIA podem ser aplicados em iniciativas de instituições inscritas no CMDCA, campanhas, serviços e políticas públicas que fortaleçam a rede de atendimento.</p>
+    <p>O Conselho Municipal de Direitos da Criança e do Adolescente (CMDCA) é o responsável por gerir e deliberar sobre a utilização dos recursos, garantindo transparência e alinhamento às prioridades estabelecidas.</p>
+
+    <p>Nesta aba você encontrará:</p>
+    <ul>
+      <li>Informações sobre o funcionamento do FIA</li>
+      <li>Editais e chamamentos públicos</li>
+      <li>Prestação de contas e relatórios</li>
+      <li>Projetos financiados pelo Fundo</li>
+      <li>Orientações para instituições interessadas</li>
+    </ul>
+
+    <p>Para acessar documentos ou informações específicas:</p>
+    <p>Link para documentos do FIA: Link em manutenção.</p>
+  </section>
+
+</main>
+
+<footer>
+</footer>
 
 </body>
 </html>
