--- a/Abrigo.html
+++ b/Abrigo.html
@@ -1,32 +1,40 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Abrigo Institucional – Vargem Alta/ES</title>
+  <title>Abrigo Institucional</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-
-<div class="boxx">
-  <h1>Abrigo Institucional – Vargem Alta/ES</h1>
-</div>
-
-<p> Consiste no acolhimento provisório e excepcional para crianças e adolescentes de ambos os sexos, inclusive crianças e adolescentes com deficiência, sob medida de
+<header>
+  <h1>ABRIGO INSTITUCIONAL</h1>
+</header>
+<main>
+<!-- Sobre o CREAS -->
+  <section class="box">
+  <h2>Abrigo Institucional - Vargem Alta/ES</h2>
+<p> 
+Consiste no acolhimento provisório e excepcional para crianças e adolescentes de ambos os sexos, inclusive crianças e adolescentes com deficiência, sob medida de
 proteção(Art.98 do Estatuto da Criança e do Adolescente) e em situação de risco pessoal e social, cujas famílias ou responsáveis encontrem - se temporariamente 
-impossibilitados de cumprir sua função de cuidado e proteção.</p>
-
-<p>A Alta complexidade corresponde ao serviço de acolhimento provisório a pessoas e famílias que estejam em situação de abandono, ameaça ou violação de direitos. 
+impossibilitados de cumprir sua função de cuidado e proteção.
+A Alta complexidade corresponde ao serviço de acolhimento provisório a pessoas e famílias que estejam em situação de abandono, ameaça ou violação de direitos. 
 De acordo com a Resolução nº 109, de 11 de novembro de 2009, que dispõe sobre a Tipificação Nacional dos Serviços Socioassistenciais, quatro serviços compõem a 
-Proteção Social Especial (PSE) de Alta Complexidade:</p>
-
-<p>Serviço de Acolhimento Institucional (que poderá ser desenvolvido nas modalidades de abrigo institucional, casa-lar, casa de passagem ou residência inclusiva);
-Serviço de Acolhimento em República; Serviço de Acolhimento em Família Acolhedora; e Serviço de Proteção em situações de Calamidade Pública e de Emergência.</p>
-
-<p> O Serviço de Acolhimento Institucional, Municipal o “Abrigo Institucional Glauber Coelho” tem capacidade para atender 20 crianças e/ou adolescentes.</p>
-A Instituição desenvolve diversas atividades, dentre elas destacamos:</p>
-
-<div class="box">
+Proteção Social Especial (PSE) de Alta Complexidade: 
+Serviço de Acolhimento Institucional que poderá ser desenvolvido nas modalidades de:
+<ul>
+   <li>Abrigo institucional;</li>
+   <li>Casa-lar;</li>
+   <li>Casa de passagem ou residência inclusiva;</li>
+   <li>Serviço de Acolhimento em República; </li>
+   <li>Serviço de Acolhimento em Família Acolhedora;</li>
+   <li>Serviço de Proteção em situações de Calamidade Pública e de Emergência.</li>
+</ul>
+<br>
+<p>
+<strong> O Serviço Municipal de Acolhimento Institucional, o Abrigo Institucional "Glauber Coelho", Municipal o “Abrigo Institucional Glauber Coelho” tem capacidade para atender 20 crianças e/ou adolescentes.
+A Instituição desenvolve diversas atividades, dentre elas destacamos: </strong>
+</p>
   <ul>
     <li>Reunião de equipe e formação continuada;</li>
     <li>Implementação e articulação com Ministério Público, Vara da Infância e Juventude e Conselho Tutelar;</li>
@@ -37,25 +45,31 @@ A Instituição desenvolve diversas atividades, dentre elas destacamos:</p>
     <li>Datas comemorativas;</li>
     <li>“Projeto de férias”.</li>
   </ul>
+  <br>
   <p><strong>Responsável:</strong> Larissa Marriel Sales</p>
   <p><strong>Formas de Atendimento:</strong></p>
   <p>Demanda Judicial</p>
 </div>
 
 <div class="box apadrinhamento">
-  <img alt="" src="img/pda.jpg" class="img-apadrinhamento">
-  
-<p>O Projeto de Apadrinhamento é uma iniciativa fundamental para minimizar os danos sociais e emocionais enfrentados por muitos jovens de Vargem Alta. 
-Instituído pela Lei Nº 1.368, de 29 de novembro de 2021, e alterado pela Lei Nº 1.466, de 28 de agosto de 2023,
-o projeto oferece três modalidades de apadrinhamento: <strong> Afetivo, Financeiro e Prestacional. </strong>
-Cada uma delas visa proporcionar diferentes formas de apoio e envolvimento, contribuindo significativamente para
-o desenvolvimento integral das crianças e adolescentes institucionalizados.</p>
-
-<p><strong><a href="https://www.vargemalta.es.gov.br/uploads/documento/20240731153250-programa-de-apadrinhamento.pdf" target="_blank">
+  <img alt="" src="/img/pda.jpg" class="img-apadrinhamento">
+ 
+  <p>
+  O Projeto de Apadrinhamento é uma iniciativa fundamental para minimizar os danos sociais e emocionais enfrentados por muitos jovens de Vargem Alta. 
+  Instituído pela Lei Nº 1.368, de 29 de novembro de 2021, e alterado pela Lei Nº 1.466, de 28 de agosto de 2023,
+  o projeto oferece três modalidades de apadrinhamento: <strong> Afetivo, Financeiro e Prestacional. </strong>
+  Cada uma delas visa proporcionar diferentes formas de apoio e envolvimento, contribuindo significativamente para
+  o desenvolvimento integral das crianças e adolescentes institucionalizados.
+</p>
+<p>
+  <strong><a href="https://www.vargemalta.es.gov.br/uploads/documento/20240731153250-programa-de-apadrinhamento.pdf" target="_blank">
 Clique aqui e saiba mais informações sobre o programa.
-</a></strong></p>
-</div>
+</a></strong>
+</p>
+</section>
 
+
+</main>
 <div class="footer">
 </div>
 
@@ -63,7 +77,4 @@ Clique aqui e saiba mais informações sobre o programa.
 </html>
 
 
-
 </strong>
-
-
