--- a/cras.html
+++ b/cras.html
@@ -135,7 +135,7 @@
   Todos os idosos, acima de 65 anos, que tenham renda mensal inferior ou igual a dois salários mínimos. Para ter direito, o cidadão deve ter inscrição do Cadastro Único.
 </p>
 
-<h2>9. A CARTEIRA DE IDENTIFICAÇÃO DA PESSOA COM TRANSTORNO DO ESPECTRO AUTISTA (CIPTEA)</h2>
+<h2>9. A CARTEIRA MUNICIPAL DE IDENTIFICAÇÃO DA PESSOA COM TRANSTORNO DO ESPECTRO AUTISTA (CIMPTEA)</h2>
 <p>
   O documento contém informações de identificação da pessoa com Transtorno do Espectro Autista, contato de emergência e, caso tenha, informações de seu representante legal/cuidador para trazer mais segurança e autonomia para os beneficiários do serviço. A Ciptea é um instrumento que visa garantir a atenção integral, o pronto atendimento e a prioridade no atendimento e no acesso aos serviços públicos e privados.
 </p>
@@ -152,7 +152,8 @@
   <li>Telefone e e-mail do responsável legal ou cuidador;</li>
   <li>Fotografia do identificado;</li>
   <li>Documento que comprove a tipagem sanguínea do requerente;</li>
-  <li>Laudo médico digitalizado contendo dados do paciente, CID, assinatura, carimbo e número do CRM do médico responsável.</li>
+  <li>Laudo médico digitalizado contendo dados do paciente, 
+   <P>CID, assinatura, carimbo e número do CRM do médico responsável.</P>
 </ul>
 
 <h2>10. INCLUIR E MUNDO DO TRABALHO</h2>
@@ -185,3 +186,4 @@
 </body>
 </html>
 -
+
