--- a/cras.html
+++ b/cras.html
@@ -142,20 +142,35 @@
 
 <h3>Documentação Necessária:</h3>
 <ul>
-  <li>Carteira de identidade (RG) do identificado;</li>
-  <li>CPF do identificado;</li>
-  <li>Comprovante de residência do identificado;</li>
-  <li>Número de telefone do identificado;</li>
-  <li>Carteira de identidade (RG) do responsável legal ou cuidador;</li>
-  <li>CPF do responsável legal ou cuidador;</li>
-  <li>Comprovante de residência do responsável legal ou cuidador;</li>
-  <li>Telefone e e-mail do responsável legal ou cuidador;</li>
-  <li>Fotografia do identificado;</li>
-  <li>Documento que comprove a tipagem sanguínea do requerente;</li>
-  <li>Laudo médico digitalizado contendo dados do paciente, 
+ Carteira de identidade (RG) do identificado;
+  CPF do identificado;
+ Comprovante de residência do identificado;
+ Número de telefone do identificado;
+ Carteira de identidade (RG) do responsável legal ou cuidador;
+  CPF do responsável legal ou cuidador;
+  Comprovante de residência do responsável legal ou cuidador;
+ Telefone e e-mail do responsável legal ou cuidador;
+  Fotografia do identificado;
+ Documento que comprove a tipagem sanguínea do requerente;
+  Laudo médico digitalizado contendo dados do paciente, 
    <P>CID, assinatura, carimbo e número do CRM do médico responsável.</P>
 </ul>
-
+ <li>Carteira de identidade (RG) do identificado;</li>
+ <li>CPF do identificado;</li>
+ <li>Comprovante de residência do identificado;
+ <li>Número de telefone do identificado;</li>
+ <li>Carteira de identidade (RG) do responsável legal ou cuidador;</li>
+ <li>CPF do responsável legal ou cuidador;</li>
+ <li>Comprovante de residência do responsável legal ou cuidador;</li>
+ <li>Telefone e e-mail do responsável legal ou cuidador;</li>
+ <li>Fotografia do identificado, em arquivo digital e/ou impressa;</li>
+ <li>Documento que comprove a tipagem sanguínea do requerente;</li>
+ <ol type="I">
+ <li>Laudo médico digitalizado, contendo:</li>
+ <li>Dados do paciente;</li>
+ <li>Classificação Internacional de Doenças (CID);</li>
+ <li>Assinatura, carimbo e número do CRM do médico responsável;</li>
+ </ol>
 <h2>10. INCLUIR E MUNDO DO TRABALHO</h2>
 <p>
   Trata-se de uma iniciativa que tem como principal objetivo reduzir a pobreza no Estado do Espírito Santo, com foco na erradicação da extrema pobreza, para que todos os cidadãos aqui residentes tenham acesso aos direitos consolidados na Constituição Federal de 1988. O Programa visa fortalecer as ações do PAIF.
@@ -186,4 +201,5 @@
 </body>
 </html>
 -
+
 
