--- a/cras.html
+++ b/cras.html
@@ -152,8 +152,8 @@
  <li>Telefone e e-mail do responsável legal ou cuidador;</li>
  <li>Fotografia do identificado, em arquivo digital e/ou impressa;</li>
  <li>Documento que comprove a tipagem sanguínea do requerente;</li></ul>
+ <p>Laudo médico digitalizado, contendo:</p>
  <ol type="I">
- <li>Laudo médico digitalizado, contendo:</li>
  <li>Dados do paciente;</li>
  <li>Classificação Internacional de Doenças (CID);</li>
  <li>Assinatura, carimbo e número do CRM do médico responsável;</li>
@@ -189,6 +189,7 @@
 </body>
 </html>
 -
+
 
 
 
