--- a/cras.html
+++ b/cras.html
@@ -150,7 +150,7 @@
  <li>CPF do responsável legal ou cuidador;</li>
  <li>Comprovante de residência do responsável legal ou cuidador;</li>
  <li>Telefone e e-mail do responsável legal ou cuidador;</li>
- <li>Fotografia do identificado, em arquivo digital e/ou impressa;</li>
+ <li>Fotografia do identificado 3x4, em arquivo digital e/ou impressa;</li>
  <li>Documento que comprove a tipagem sanguínea do requerente;</li></ul>
  <p>Laudo médico digitalizado, contendo:</p>
  <ol type="I">
@@ -189,6 +189,7 @@
 </body>
 </html>
 -
+
 
 
 
