--- a/cmdca.html
+++ b/cmdca.html
@@ -24,16 +24,16 @@
 
     <h3>Diretoria do CMDCA</h3>
     <ul>
-      <li>Presidente: Emerson Cereza Souza</li>
-      <li>Vice-Presidente: Ana Ignez Cereza</li>
-      <li>Secretário: Samuel Cole Pereira das Neves</li>
+      <strong>Presidente:</strong> Emerson Cereza Souza
+      <strong>Vice-Presidente:</strong> Ana Ignez Cereza
+      <strong>Secretário:</strong> Samuel Cole Pereira das Neves
     </ul>
 
     <h3>Contato</h3>
     <ul>
-      <li>E-mail: <a href="mailto:comdcavavga@gmail.com">comdcavavga@gmail.com</a></li>
-      <li>Telefone: (28) 99986-4027</li>
-      <li>Endereço: Av. José João Sartório, 36-16 - Vargem Alta, ES, 29295-000 (O mesmo da Secretaria Municipal de Assistência e Desenvolvimento Social.</li>
+      <striong>E-mail: </strong><a href="mailto:comdcavavga@gmail.com">comdcavavga@gmail.com</a>
+      <strong>Telefone:</strong> (28) 99986-4027
+      <strong>Endereço:</strong> Av. José João Sartório, 36-16 - Vargem Alta, ES, 29295-000 (O mesmo da Secretaria Municipal de Assistência e Desenvolvimento Social.
     </ul>
   </section>
 
@@ -105,3 +105,4 @@
 
 </body>
 </html>
+
