--- a/cmdm.html
+++ b/cmdm.html
@@ -29,17 +29,17 @@
 
     <h3>Diretoria do CMDM</h3>
     <ul>
-      <li><strong>Presidente:</strong> Lubiana Aparecida Pereira Fonseca</li>
-      <li><strong>Vice-Presidente:</strong> Neuzeli Farias Fonseca</li>
-      <li><strong>Secretária:</strong> Denise Maria Gomes Moreira</li>
+      <strong>Presidente:</strong> Lubiana Aparecida Pereira Fonseca
+      <strong>Vice-Presidente:</strong> Neuzeli Farias Fonseca
+      <strong>Secretária:</strong> Denise Maria Gomes Moreira
     </ul>
 
     <h3>Contato</h3>
     <ul>
-      <li><strong>E-mail:</strong> <a href="mailto:conselhomulherva26@gmail.com">conselhomulherva26@gmail.com</a></li>
-      <li><strong>Telefone:</strong> (28) 99986-4027</li>
-      <li><strong>Endereço:</strong> Avenida José João Sartório, nº 36-16 – Vargem Alta/ES – CEP 29295-000</li>
-      <li>(Mesmo endereço da Secretaria Municipal de Assistência e Desenvolvimento Social)</li>
+      <strong>E-mail:</strong> <a href="mailto:conselhomulherva26@gmail.com">conselhomulherva26@gmail.com</a>
+      <strong>Telefone:</strong> (28) 99986-4027</li>
+      <strong>Endereço:</strong> Avenida José João Sartório, nº 36-16 – Vargem Alta/ES – CEP 29295-000
+      <p>(Mesmo endereço da Secretaria Municipal de Assistência e Desenvolvimento Social)</p>
     </ul>
   </section>
 
@@ -84,3 +84,4 @@
 
 </body>
 </html>
+
