--- a/cmdpi.html
+++ b/cmdpi.html
@@ -32,17 +32,17 @@
 
     <h3>Diretoria do CMDPI</h3>
     <ul>
-      <li><strong>Presidente:</strong> Andréia Bazoni Dillen Viale</li>
-      <li><strong>Vice-Presidente:</strong> Ana Ignês Cereza</li>
-      <li><strong>Secretária:</strong> Maria Aparecida Ferreira Pimental Pazetto</li>
+      <strong>Presidente:</strong> Andréia Bazoni Dillen Viale
+      <strong>Vice-Presidente:</strong> Ana Ignês Cereza
+      <strong>Secretária:</strong> Maria Aparecida Ferreira Pimental Pazetto
     </ul>
 
     <h3>Contatos</h3>
     <ul>
-      <li><strong>Endereço:</strong> Avenida José João Sartório, nº 36-16 – Vargem Alta/ES – CEP 29295-000</li>
-      <li>(Mesmo endereço da Secretaria Municipal de Assistência e Desenvolvimento Social)</li>
-      <li><strong>Telefone:</strong> (28) 99949-4027</li>
-      <li><strong>E-mail:</strong> <a href="mailto:cmdpi.vargemalta@gmail.com">cmdpi.vargemalta@gmail.com</a></li>
+      <strong>Endereço:</strong> Avenida José João Sartório, nº 36-16 – Vargem Alta/ES – CEP 29295-000
+      <p>(Mesmo endereço da Secretaria Municipal de Assistência e Desenvolvimento Social)</p>
+      <strong>Telefone:</strong> (28) 99949-4027</li>
+      <strong>E-mail:</strong> <a href="mailto:cmdpi.vargemalta@gmail.com">cmdpi.vargemalta@gmail.com</a>
     </ul>
   </section>
 
@@ -85,3 +85,4 @@
 
 </body>
 </html>
+
