--- a/comades.html
+++ b/comades.html
@@ -25,18 +25,18 @@
     <!-- Diretoria -->
     <h3>Diretoria do COMADES</h3>
     <ul>
-      <li><strong>Presidente:</strong> Julimar Paiva Ferraz Neves</li>
-      <li><strong>Vice-Presidente:</strong> Kely Sandra Fardim</li>
-      <li><strong>Secretário:</strong> Emerson Cereza Souza</li>
+      <strong>Presidente:</strong> Julimar Paiva Ferraz Neves
+      <strong>Vice-Presidente:</strong> Kely Sandra Fardim
+      <strong>Secretário:</strong> Emerson Cereza Souza
     </ul>
     <br>
 
     <!-- Contato -->
     <h3>Contato</h3>
     <ul>
-      <li><strong>E-mail:</strong> <a href="mailto:comadesva@gmail.com">comadesva@gmail.com</a></li>
-      <li><strong>Telefone:</strong> (28) 99986-4027</li>
-      <li><strong>Endereço:</strong> Av. José João Sartório, 36-16 – Vargem Alta/ES – CEP: 29295-000</li>
+      <strong>E-mail:</strong> <a href="mailto:comadesva@gmail.com">comadesva@gmail.com</a>
+      <strong>Telefone:</strong> (28) 99986-4027
+      <strong>Endereço:</strong> Av. José João Sartório, 36-16 – Vargem Alta/ES – CEP: 29295-000
     </ul>
   </section>
 
@@ -114,3 +114,4 @@
 
 </body>
 </html>
+
